@@ -1,5 +1,5 @@
 #
-# Sccsid @(#)heirloom.spec	1.32 (gritter) 11/14/05
+# Sccsid @(#)heirloom.spec	1.33 (gritter) 01/27/07
 #
 Summary: Heirloom Toolchest: A collection of standard Unix utilities
 Name: heirloom
@@ -34,6 +34,7 @@ BuildRequires: /usr/include/zlib.h /usr/include/bzlib.h
 %define	susbin		%{defbin}/posix
 %define	su3bin		%{defbin}/posix2001
 %define	ucbbin		%{usr}/ucb
+%define	ccsbin		%{usr}/ccs/bin
 %define	deflib		%{usr}/5lib
 %define	defsbin		%{defbin}
 %define	magic		%{deflib}/magic
@@ -68,7 +69,7 @@ BuildRequires: /usr/include/zlib.h /usr/include/bzlib.h
 #
 # Combine the settings defined above.
 #
-%define	p_flags	SHELL=%{shell} ROOT=%{buildroot} DEFBIN=%{defbin} SV3BIN=%{sv3bin} S42BIN=%{s42bin} SUSBIN=%{susbin} SU3BIN=%{su3bin} UCBBIN=%{ucbbin} DEFLIB=%{deflib} DEFSBIN=%{defsbin} MANDIR=%{mandir} DFLDIR=%{dfldir} SPELLHIST=%{spellhist} SULOG=%{sulog} MAGIC=%{magic}
+%define	p_flags	SHELL=%{shell} ROOT=%{buildroot} DEFBIN=%{defbin} SV3BIN=%{sv3bin} S42BIN=%{s42bin} SUSBIN=%{susbin} SU3BIN=%{su3bin} UCBBIN=%{ucbbin} CCSBIN=%{ccsbin} DEFLIB=%{deflib} DEFSBIN=%{defsbin} MANDIR=%{mandir} DFLDIR=%{dfldir} SPELLHIST=%{spellhist} SULOG=%{sulog} MAGIC=%{magic}
 %define	c_flags	CC=%{xcc} CFLAGS2=%{cflags2} CFLAGSS=%{cflagss} CFLAGSU=%{cflagsu} CFLAGS=%{cflags} CPPFLAGS=%{cppflags} LCURS=%{lcurs} LIBZ=%{libz} USE_ZLIB=%{use_zlib} LIBBZ2=%{libbz2} USE_BZLIB=%{use_bzlib} TTYGRP= YACC=%{yacc} LEX=%{lex}
 %define	makeflags %{p_flags} %{c_flags}
 
@@ -107,7 +108,7 @@ find . -name NOTES -depth | cpio -pdm _doc
 # and add attributes.
 #
 rm -f filelist.rpm
-for f in %{defbin} %{sv3bin} %{s42bin} %{susbin} %{ucbbin} \
+for f in %{defbin} %{sv3bin} %{s42bin} %{susbin} %{ucbbin} %{ccsbin} \
 	%{deflib} %{defsbin} %{magic}
 do
 	if test -d %{buildroot}/$f
